# policy-rag-poc

./: .gitignore  README.md  pyproject.toml
corpus/: README.md  manifest.yaml
corpus/sample_documents/: policy_demo_nl.md
scripts/: download_corpus.sh  ingest.py
src/rag_defence_poc/: __init__.py  api.py  audit.py  chunking.py  config.py  embedder.py  ingest_cli.py  llm.py  prompts.py  retrieve.py  store.py
static/: index.html
